# Kestrel

./: .gitignore  CHANGELOG.md  Makefile  README.md  UPSTREAM.md  kestrel  windhover
.github/workflows/: ci.yml  release-macos.yml  release-windows.yml
app/: index.html  package-lock.json  package.json
app/public/: catalog.json
app/src/: App.tsx  styles.css
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs
docs/: DOWNLOAD.md  dense_qwen_bench.json
engine/: Makefile  README.md
engine/include/kestrel/: engine.h
engine/io/: st.h  tok.h
engine/runtime/: dense.c  dense.h  engine.c  idot_avx.h  model_desc.h  windhover.c  wmir.h
packaging/: CHECKLIST.md  build_sidecar.ps1  build_sidecar.sh  server_entry.py  windhover-server.spec
site/: index.html
tools/: agent_workspace.py  bench_host.py  catalog_engine_audit.py  dense_qwen_bench.py  full_bench.py  kestrel_pack.py  laptop_limit_bench.py  laptop_soak_bench.py  make_laptop_stress_fixture.py  qwen7b_bench.py  real_model_bench.py  render_bench_chart.py  wh_parity.py  windhover_bench.py
tools/wmir/: __init__.py  emit.py  lower.py  ops.py
web/: package-lock.json  package.json
